# algos_and_ds

./: .clang-format  .clang-tidy  .gitignore  App.cpp  CMakeLists.txt  CPPLINT.cfg  README.md  configure.sh  requirements.txt
.github/workflows/: build-docs.yml  clang-checks.yml  cmake-single-platform.yml  static-pages-deploy.yml
docs/doxygen/: Doxyfile
docs/sphinx/: Makefile
docs/sphinx/source/: algorithms.rst  conf.py  datastructures.rst  index.rst
docs/sphinx/source/algorithms/: sorting.rst
docs/sphinx/source/datastructures/: binarytree.rst  dynamicarray.rst  hashmap.rst  heap.rst  prefixtree.rst  stack.rst
hooks/: pre-commit
scripts/: format_all.sh
src/: CMakeLists.txt
src/Algorithms/: CMakeLists.txt  Sorting.cpp  Sorting.h  Sorting.hpp
src/DataStructures/: BinaryTree.hpp  CMakeLists.txt  DynamicArray.h  DynamicArray.hpp  HashMap.hpp  Heap.hpp  PrefixTree.cpp  PrefixTree.hpp  Stack.hpp
tests/: BinaryTreeTest.cpp  CMakeLists.txt  DynamicArrayTest.cpp  HashMapTest.cpp  HeapTest.cpp  PrefixTreeTest.cpp  SortingTest.cpp  StackTest.cpp
